--- a/site/index.html
+++ b/site/index.html
@@ -7,44 +7,126 @@
     <script src="js/swapCss.js">
     </script>
 
-    <link type="text/css" rel="stylesheet" href="styles/style1/css1.css" id="swappableCss">
+
     <link type="text/css" rel="stylesheet" href="styles/tests/testStylesheet.css">
     <link type="text/css" rel="stylesheet" href="styles/common/commonStylesheet.css">
+    <link type="text/css" rel="stylesheet" href="" id="swappableCss">
+
+    <script>
+        setSheetList(['styles/style1/css1.css','styles/style2/css2.css']);
+        nextSheet('swappableCss');
+    </script>
+
 
 </head>
-<body onload="setSheetList(['styles/style1/css1.css','styles/style2/css2.css']); nextSheet('swappableCss');" class="resetBody">
-<button onclick="nextSheet('swappableCss')" style="float: right; position: relative;">SWAP</button>
+<body class="resetBody">
 
-<!-- MENU -->
-<section class="menu">
-    <!-- CABEÇALHO -->
-    <header class="">
-        [Header]
-        <div class="icon"></div>
-    </header>
+<!-- CABEÇALHO -->
+<header>
+
+    <div class="swapBg" onclick="nextSheet('swappableCss');">
+        <div class="icon" style="background-image: url('media/images/icons/icons8-Rotate Right-96.png')"><span>Trocar CSS</span></div>
+    </div>
+
+        <div class="icon css2" style="background-image: url('media/images/icons/logotipo_ft.png')"></div>
+        <div class="icon css2" style="background-image: url('media/images/icons/logo_unicamp.svg')"></div>
+
+    <div>
+        <h1>Grupo Xablau- SI401B</h1>
+    </div>
 
     <!-- MENU -->
-    <nav class="">
-        <h1>Menu</h1>
-        <ul>
-            <li><a href="">Name</a></li>
-            <li><a href="">Name</a></li>
-            <li><a href="">Name</a></li>
-        </ul>
-    </nav>
-</section>
+    <section class="menu">
+        <!-- MENU -->
+        <nav class="menu">
+            <ul>
+                <li><a href="">Página inicial</a></li>
+                <li><a href="">Grupo</a></li>
+                <li><a href="">Mídia</a></li>
+                <li><a href="">Conceitos utilizados</a></li>
+            </ul>
+        </nav>
+    </section>
+</header>
 
 <!-- CONTEÚDO -->
 <section class="content">
-    <h1>Texto de exemplo</h1>
+    <h1>Objetivos do grupo na disciplina</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
-    
-    <div class="flexContent">
+
+    <h1>Componentes do grupo</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
+
+
+    <h1>Contato com o grupo</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
+
+
+
+</section>
+
+<section class="sidebar css2">
+    <nav class="sideMenu">
+        <ul>
+
+            <li><a href="">Página inicial</a></li>
+            <li><a href="">Grupo</a></li>
+                <ul>
+                    <li><a href="">André</a></li>
+                    <li><a href="">Mayara</a></li>
+                    <li><a href="">Pedro</a></li>
+                    <li><a href="">Huanna</a></li>
+                    <li><a href="">Karen</a></li>
+                </ul>
+
+
+            <li><a href="">Mídia</a></li>
+                <ul>
+                    <li><a href="">Audio</a></li>
+                    <li><a href="">Video</a></li>
+                    <li><a href="">Links</a></li>
+                </ul>
+            <li><a href="">Conceitos utilizados</a></li>
+                <ul>
+                    <li><a href="">HTML</a></li>
+                    <li><a href="">CSS</a></li>
+                    <li><a href="">Outros</a></li>
+                </ul>
+        </ul>
+    </nav>
+
+</section>
+
+
+<!-- FOOTET -->
+<footer class="footer">
+    [Footer]
+</footer>
+
+
+<!--
+
+[11:47, 11/9/2017] +55 19 98234-4138: PÁGINA (x1): Página inicial | SEÇÕES: objetivos, formas de contato com o grupo, links para a página de cada membro
+[11:47, 11/9/2017] +55 19 98234-4138: PÁGINA (x5): Membro do grupo | SEÇÕES: breve currículo e biografia, trabalhos feitos em outras disciplinas
+[11:47, 11/9/2017] +55 19 98234-4138: PÁGINA (x1): Mídia | SEÇÕES: PARTE1: Links  PARTE 2: vídeos e áudios (talvez indicando para cada item quem o adicionou).
+[11:47, 11/9/2017] +55 19 98234-4138: PÁGINA (x1): Conceitos HTML e CSS: | SEÇÕES: Conceitos de html não vistos em aula e Conceitos de css não vistos em aula
+
+<div class="flexContent">
         <div class="box small border">onsectetur adipiscing elit. Nullam erat neque, consequat in </div>
         <div class="box full border">onsectetur adipiscing elit. Nullam erat neque, consequat in </div>
         <div class="box medium  border">onsectetur adipiscing elit. Nullam erat neque, consequat in </div>
@@ -52,13 +134,8 @@
         <div class="box small  border">onsectetur adipiscing elit. Nullam erat neque, consequat in </div>
         <div class="box medium border">onsectetur adipiscing elit. Nullam erat neque, consequat in </div>
     </div>
-</section>
 
-
-<!-- FOOTER -->
-<footer class="footer">
-    [Footer]
-</footer>
+-->
 
 
 </body>
