--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Programação Web</title>
 
+    <link rel="icon" href="" type="image/gif" sizes="16x16">
+
     <script src="js/swapCss.js">
     </script>
 
@@ -14,7 +16,8 @@
 
     <script>
         setSheetList(['styles/style1/css1.css','styles/style2/css2.css']);
-        nextSheet('swappableCss');
+        //nextSheet('swappableCss');
+        restoreLastSheet('swappableCss');
     </script>
 
 
@@ -40,10 +43,10 @@
         <!-- MENU -->
         <nav class="menu">
             <ul>
-                <li><a href="">Página inicial</a></li>
-                <li><a href="">Grupo</a></li>
-                <li><a href="">Mídia</a></li>
-                <li><a href="">Conceitos utilizados</a></li>
+                <li><a href="index.html">Página inicial</a></li>
+                <li><a href="html/group.html">Grupo</a></li>
+                <li><a href="html/media.html">Mídia</a></li>
+                <li><a href="html/concepts.html">Conceitos utilizados</a></li>
             </ul>
         </nav>
     </section>
@@ -59,24 +62,75 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
 
-    <h1>Componentes do grupo</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
+    <h1>Integrantes do grupo</h1>
+    <div class="flexContent flexNoWrap">
 
+        <!-- PESSOA -->
+        <div class="box typePerson wrappableFlexBoxContent">
+            <a href="html/group/andre.html">
+                <div class="icon personIcon" style="background-image: url('media/images/icons/icons8-Customer-96.png')">
+                </div>
+            </a>
+            <p class="centralizedText">
+                <a href="html/group/andre.html" class="clear bold">André L. R. Estevam</a>
+            </p>
+            <a class="centralizedText" href="mailto:a166348@g.unicamp.br" target="_top">e-mail</a>
+        </div>
+
+        <!-- PESSOA -->
+        <div class="box typePerson wrappableFlexBoxContent">
+            <a href="html/group/">
+                <div class="icon personIcon" style="background-image: url('media/images/icons/icons8-Customer-96.png')">
+                </div>
+            </a>
+            <p class="centralizedText">
+                <a href="html/group/" class="clear bold">Nome do Nome nomes muitosnomes</a>
+            </p>
+            <a class="centralizedText" href="mailto:" target="_top">e-mail</a>
+        </div>
+
+        <!-- PESSOA -->
+        <div class="box typePerson wrappableFlexBoxContent">
+            <a href="html/group/">
+                <div class="icon personIcon" style="background-image: url('media/images/icons/icons8-Customer-96.png')">
+                </div>
+            </a>
+            <p class="centralizedText">
+                <a href="html/group/" class="clear bold">Nome do Nome nomes muitosnomes</a>
+            </p>
+            <a class="centralizedText" href="mailto:" target="_top">e-mail</a>
+        </div>
+
+        <!-- PESSOA -->
+        <div class="box typePerson wrappableFlexBoxContent">
+            <a href="html/group/">
+                <div class="icon personIcon" style="background-image: url('media/images/icons/icons8-Customer-96.png')">
+                </div>
+            </a>
+            <p class="centralizedText">
+                <a href="html/group/" class="clear bold">Nome do Nome nomes muitosnomes</a>
+            </p>
+            <a class="centralizedText" href="mailto:" target="_top">e-mail</a>
+        </div>
+
+        <!-- PESSOA -->
+        <div class="box typePerson wrappableFlexBoxContent">
+            <a href="html/group/">
+                <div class="icon personIcon" style="background-image: url('media/images/icons/icons8-Customer-96.png')">
+                </div>
+            </a>
+            <p class="centralizedText">
+                <a href="html/group/" class="clear bold">Nome do Nome nomes muitosnomes</a>
+            </p>
+            <a class="centralizedText" href="mailto:" target="_top">e-mail</a>
+        </div>
+    </div>
 
     <h1>Contato com o grupo</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam erat neque, consequat in diam eget, euismod commodo magna. Morbi vitae erat pellentesque, dapibus dui sed, auctor eros. Nunc vel urna sagittis, vestibulum orci ut, vestibulum odio. In ipsum ante, ornare non ornare ut, ullamcorper eu nunc. Duis dictum aliquet consequat. In nec magna accumsan, ultricies ipsum ut, semper lorem. Fusce at massa purus. Integer nec vulputate lectus, at sollicitudin lectus.</p>
-
-
+    <p>
+        O grupo pode ser contatado através do e-mail
+        <a href="mailto:grupoxablau2017@gmail.com" target="_top">grupoxablau2017@gmail.com</a>
+    </p>
 
 </section>
 
@@ -84,29 +138,31 @@
     <nav class="sideMenu">
         <ul>
 
-            <li><a href="">Página inicial</a></li>
-            <li><a href="">Grupo</a></li>
+            <li><a href="index.html">Página inicial</a></li>
+            <li><a href="">Grupo</a>
                 <ul>
-                    <li><a href="">André</a></li>
-                    <li><a href="">Mayara</a></li>
-                    <li><a href="">Pedro</a></li>
-                    <li><a href="">Huanna</a></li>
-                    <li><a href="">Karen</a></li>
+                    <li><a href="html/group/andre.html">André</a></li>
+                    <li><a href="html/group/mayara.html">Mayara</a></li>
+                    <li><a href="html/group/huanna.html">Huanna</a></li>
+                    <li><a href="html/group/pedro.html">Pedro</a></li>
+                    <li><a href="html/group/karen.html">Karen</a></li>
                 </ul>
+            </li>
 
-
-            <li><a href="">Mídia</a></li>
+            <li><a href="">Mídia</a>
                 <ul>
                     <li><a href="">Audio</a></li>
                     <li><a href="">Video</a></li>
                     <li><a href="">Links</a></li>
                 </ul>
-            <li><a href="">Conceitos utilizados</a></li>
+            </li>
+            <li><a href="">Conceitos utilizados</a>
                 <ul>
                     <li><a href="">HTML</a></li>
                     <li><a href="">CSS</a></li>
                     <li><a href="">Outros</a></li>
                 </ul>
+            </li>
         </ul>
     </nav>
 
@@ -114,17 +170,27 @@
 
 
 <!-- FOOTET -->
-<footer class="footer">
-    [Footer]
+<footer class="footer centralizedText">
+    <p>
+        Website desenvolvido para a disciplina de Programação Web<br>
+        <strong>Contato: </strong><a href="mailto:grupoxablau2017@gmail.com" target="_top">grupoxablau2017@gmail.com</a><br>
+        Projeto no <a href="https://github.com/ALREstevam/Programacao-Web-T1" target="_blank">GitHub</a>
+    </p>
+
+
+
+
+
+
 </footer>
 
 
 <!--
 
-[11:47, 11/9/2017] +55 19 98234-4138: PÁGINA (x1): Página inicial | SEÇÕES: objetivos, formas de contato com o grupo, links para a página de cada membro
-[11:47, 11/9/2017] +55 19 98234-4138: PÁGINA (x5): Membro do grupo | SEÇÕES: breve currículo e biografia, trabalhos feitos em outras disciplinas
-[11:47, 11/9/2017] +55 19 98234-4138: PÁGINA (x1): Mídia | SEÇÕES: PARTE1: Links  PARTE 2: vídeos e áudios (talvez indicando para cada item quem o adicionou).
-[11:47, 11/9/2017] +55 19 98234-4138: PÁGINA (x1): Conceitos HTML e CSS: | SEÇÕES: Conceitos de html não vistos em aula e Conceitos de css não vistos em aula
+[11:47, 11/9/2017] PÁGINA (x1): Página inicial | SEÇÕES: objetivos, formas de contato com o grupo, links para a página de cada membro
+[11:47, 11/9/2017] PÁGINA (x5): Membro do grupo | SEÇÕES: breve currículo e biografia, trabalhos feitos em outras disciplinas
+[11:47, 11/9/2017] PÁGINA (x1): Mídia | SEÇÕES: PARTE1: Links  PARTE 2: vídeos e áudios (talvez indicando para cada item quem o adicionou).
+[11:47, 11/9/2017] PÁGINA (x1): Conceitos HTML e CSS: | SEÇÕES: Conceitos de html não vistos em aula e Conceitos de css não vistos em aula
 
 <div class="flexContent">
         <div class="box small border">onsectetur adipiscing elit. Nullam erat neque, consequat in </div>
