--- a/site/index.html
+++ b/site/index.html
@@ -55,14 +55,11 @@
 
 <!-- CONTEÚDO -->
 <section class="content">
-    <div class="icon iconTitle yellow" style="background-image: url('media/images/icons/icons8-Center of Gravity.png'); min-height: 40pt;">
-        <h2 class="yellow">Objetivos</h2>
+    <div class="icon iconTitle" style="background-image: url('media/images/icons/icons8-Center of Gravity.png'); min-height: 40pt;">
+        <h2>Objetivos</h2>
     </div>
 
-
-
-
-    <div class="red">
+    <div>
         <ul style="display: block">
             <li>
                 Aprender as melhores formas de criação de páginas web usando HTML e CSS.
@@ -103,12 +100,12 @@
 
         <!-- PESSOA -->
         <div class="box typePerson wrappableFlexBoxContent">
-            <a href="html/group/">
+            <a href="html/group/huanna.html">
                 <div class="icon personIcon" style="background-image: url('media/images/icons/icons8-Customer-96.png')">
                 </div>
             </a>
             <p class="centralizedText">
-                <a href="html/group/" class="clear bold">Nome do Nome nomes muitosnomes</a>
+                <a href="html/group/huanna.html" class="clear bold">Huanna Raquel do Nascimento</a>
             </p>
             <a class="centralizedText" href="mailto:" target="_top">e-mail</a>
         </div>
