--- a/site/html/media.html
+++ b/site/html/media.html
@@ -108,7 +108,24 @@
     
     <h3 id="video">Video</h3>
     <div class="flexContent">
-
+	<!-- VIDEO -->
+        <div class="box type1 linkFormat">
+            <div class="completeline">
+                <video controls class="completeline">
+					<source src="../media/video/HTML5 as Fast As Possible.webm" type="video/webm">
+				</video>
+                <strong>Techquickie - HTML5 as Fast As Possible</strong>
+            </div>
+            <br>
+			<div class="completeline">
+				Fonte: <a href="https://www.youtube.com/watch?v=IsXEVQRaTX8" target="_blank">www.youtube.com/[...]</a>
+			</div>
+            <div>
+                Postado por: <a href="group/andre.html">André</a>
+            </div>
+        </div>
+        <!-- END VIDEO -->
+		
         <!-- VIDEO -->
         <div class="box type1 linkFormat">
             <div class="completeline">
