--- a/site/html/group/huanna.html
+++ b/site/html/group/huanna.html
@@ -54,7 +54,7 @@
 
 <!-- CONTEÚDO -->
 <section class="content">
-<h2><img src= "huanna.jpg" alt= "perfil" width = "200" height = "200"/>&nbsp;&nbsp;Huanna Raquel do Nascimento</h2>
+<h2><img src= "../../media/images/pictures/huanna.jpg" alt= "perfil" width = "200" height = "200"/>&nbsp;&nbsp;Huanna Raquel do Nascimento</h2>
     <h3>Biografia</h3>
     <p><strong>Cidade de nascimento:</strong> São Paulo-SP</p>
     <p><strong>Nascimento:</strong> 1993</p>
@@ -70,13 +70,13 @@
 		E-mail: huanna_nascimento@outlook.com<br/>
 		Avenida Leopoldina Ribeiro Moreira Cezar, 393 – Jardim São Paulo – Limeira- SP<br/>
 		CEP: 13183-194<br/>
-		<a href="https://www.facebook.com/huanna.nascimento"><img src= "face.png" alt= "facebook" width = "40" height = "40"/>Facebook</a><br/>
-		<a href="https://www.linkedin.com/in/huanna-nascimento-b9a680106/"><img src= "in.png" alt= "Linkedin" width = "40" height = "40"/>Linkedin</a><br/><br/><br/>
+		<a href="https://www.facebook.com/huanna.nascimento"><img src= "../../media/images/pictures/face.png" alt= "facebook" width = "40" height = "40"/>Facebook</a><br/>
+		<a href="https://www.linkedin.com/in/huanna-nascimento-b9a680106/"><img src= "../../media/images/pictures/in.png" alt= "Linkedin" width = "40" height = "40"/>Linkedin</a><br/><br/><br/>
 	</td>
 	</tr>
 	<tr>
 	<td valign=top>Formação acadêmica &nbsp;&nbsp;&nbsp;&nbsp;</td>
-	<td><img src= "unicamp.jpg" alt= "UNICAMP" width = "40" height = "40"/><b>Universidade Estadual de Campinas</b></a><br/>
+	<td><img src= "../../media/images/pictures/unicamp.jpg" alt= "UNICAMP" width = "40" height = "40"/><b>Universidade Estadual de Campinas</b></a><br/>
 	    <b>Nome do diploma:</b>  Sistemas de Informação <br/>
         <b>Área de estudo:</b>  Tecnologia da Informação<br/>
         <b>Período (ou ano previsto para a graduação):</b>  2016 – 2020 <br/><br/>
