--- a/site/html/group/andre.html
+++ b/site/html/group/andre.html
@@ -53,7 +53,7 @@
 
 <!-- CONTEÚDO -->
 <section class="content">
-    <h2>André L. R. Estevam</h2>
+    <h2>André Luiz Rodrigues Estevam</h2>
     <h3>Biografia</h3>
     <p><strong>Cidade de nascimento:</strong> Registro-SP</p>
     <p><strong>Nascimento:</strong> 1997</p>
