--- a/site/index.html
+++ b/site/index.html
@@ -84,7 +84,7 @@
 
 
 
-    <div class="flexContent flexNoWrap">
+    <div class="flexContent">
 
         <!-- PESSOA -->
         <div class="box typePerson wrappableFlexBoxContent">
