--- a/site/html/media.html
+++ b/site/html/media.html
@@ -100,6 +100,45 @@
             </div>
         </div>
         <!-- END LINK -->
+		
+		<!-- LINK -->
+        <div class="box type5 linkFormat">
+            <div class="completeline">
+                <a href="http://www.cultura.ufpa.br/dicas/htm/htm-cor4.htm" target="cores">http://www.cultura.ufpa.br/dicas/htm/htm-cor4.htm</a>
+                <strong> - Contrução de sites - Cores</strong>
+            </div>
+            <br>
+            <div>
+                Postado por: <a href="group/huanna.html">Huanna</a>
+            </div>
+        </div>
+        <!-- END LINK -->
+		
+		<!-- LINK -->
+        <div class="box type5 linkFormat">
+            <div class="completeline">
+                <a href="https://validator.w3.org/" target="validator">https://validator.w3.org/</a>
+                <strong> -  Markup Validation Service</strong>
+            </div>
+            <br>
+            <div>
+                Postado por: <a href="group/huanna.html">Huanna</a>
+            </div>
+        </div>
+        <!-- END LINK -->
+		
+		<!-- LINK -->
+        <div class="box type5 linkFormat">
+            <div class="completeline">
+                <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/HTML5/HTML5_element_list" target="validator">https://developer.mozilla.org/pt-BR/docs/Web/HTML/HTML5/HTML5_element_list</a>
+                <strong> - Lista de elementos do HTML5 </strong>
+            </div>
+            <br>
+            <div>
+                Postado por: <a href="group/huanna.html">Huanna</a>
+            </div>
+        </div>
+        <!-- END LINK -->
     </div>
 
     
@@ -155,12 +194,64 @@
         <!-- VIDEO -->
         <div class="box type1 linkFormat">
             <div class="completeline">
-                <iframe src="https://www.youtube.com/embed/L5l9lSnNMxg?rel=0&amp;showinfo=0" allowfullscreen class="videobox"></iframe>
+                <iframe src="https://www.youtube.com/embed/L5l9lSnNMxg?rel=0&amp;real=0" allowfullscreen class="videobox"></iframe>
                 <strong>Cracking Websites with Cross Site Scripting - Computerphile</strong>
             </div>
             <br>
             <div>
                 Postado por: <a href="group/andre.html">André</a>
+            </div>
+        </div>
+        <!-- END VIDEO -->
+		
+		<!-- VIDEO -->
+        <div class="box type1 linkFormat">
+            <div class="completeline">
+                <iframe src="https://www.youtube.com/watch?v=T65y3oj9s50" allowfullscreen class="videobox"></iframe>
+                <strong>APRENDA HTML5 E CSS3 - #2 HTML5 em um vídeo</strong>
+            </div>
+            <br>
+            <div>
+                Postado por: <a href="group/huanna.html">Huanna</a>
+            </div>
+        </div>
+        <!-- END VIDEO -->
+		
+		<!-- VIDEO -->
+        <div class="box type1 linkFormat">
+            <div class="completeline">
+                <iframe src="https://www.youtube.com/watch?v=WRcs8rebZtA" allowfullscreen class="videobox"></iframe>
+                <strong>Curso de HTML5 - 27 - IFRAME em HTML5</strong>
+            </div>
+            <br>
+            <div>
+                Postado por: <a href="group/huanna.html">Huanna</a>
+            </div>
+        </div>
+        <!-- END VIDEO -->
+		
+		<!-- VIDEO -->
+        <div class="box type1 linkFormat">
+            <div class="completeline">
+                <iframe src="https://www.youtube.com/watch?v=Z7z8J12hMco&list=PLwXQLZ3FdTVFi6oHo_K4IYDcwCU5-f1x5" allowfullscreen class="videobox"></iframe>
+                <strong>Design Responsivo - Aula 01 - Preparando Ambiente</strong>
+            </div>
+            <br>
+            <div>
+                Postado por: <a href="group/huanna.html">Huanna</a>
+            </div>
+        </div>
+        <!-- END VIDEO -->
+		
+		<!-- VIDEO -->
+        <div class="box type1 linkFormat">
+            <div class="completeline">
+                <iframe src="https://www.youtube.com/watch?v=093dIOCNeIc&list=PLQCmSnNFVYnT1-oeDOSBnt164802rkegc" allowfullscreen class="videobox"></iframe>
+                <strong>Desvendando a linguagem JavaScript - #1 - Introdução - Rodrigo Branas</strong>
+            </div>
+            <br>
+            <div>
+                Postado por: <a href="group/huanna.html">Huanna</a>
             </div>
         </div>
         <!-- END VIDEO -->
